# ligmagate

./: Cargo.toml  README.md  config.example.toml  flake.nix
src/: config.rs  main.rs  server.rs  watcher.rs
