[package]
name = "mulegate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
async-watcher = "0.4.0"
axum = "0.8.9"
clap = {version="4.6.1", features=["derive"]}
dirs = "6.0.0"
log = "0.4.29"
reqwest = {version="0.13.3", features=["stream"]}
serde = {version="1.0.228", features=["derive"]}
shellexpand = "3.1.2"
tokio = {version="1.52.3", features=["rt", "rt-multi-thread", "fs", "net", "signal"]}
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"
