[package]
name = "ollmo"
version = "0.1.1"
edition = "2024"
authors = ["Alex Karev"]
license-file = "LICENSE"
keywords = ["llm", "gateway"]
categories = ["command-line-utilities", "artificial-intelligence"]
description = "OpenAI API-compatible LLM gateway for personal use."
repository = "https://github.com/alex-karev/ollmo"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
async-watcher = "0.4.0"
axum = {version="0.8.9", features=["json"]}
clap = {version="4.6.1", features=["derive"]}
dirs = "6.0.0"
jsonptr = "0.7.1"
log = "0.4.29"
minijinja = "2.21.0"
reqwest = {version="0.13.3", features=["stream", "json"]}
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.150"
shellexpand = "3.1.2"
tokio = {version="1.52.3", features=["rt", "rt-multi-thread", "fs", "net", "signal"]}
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"
